--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap
 EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap
 GlobalDefaultGameMode=/Game/Blueprint/Game/GameModeBase_BP.GameModeBase_BP_C
+GameInstanceClass=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
