--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/TopDownCPP/Maps/Test.Test
+EditorStartupMap=/Game/TopDownCPP/Maps/Test.Test
 GlobalDefaultGameMode=/Game/Blueprint/Game/GameModeBase_BP.GameModeBase_BP_C
 GameInstanceClass=/Game/Blueprint/Game/BP_GameInstance.BP_GameInstance_C
 
