--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -137,6 +137,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="AimChangeInput",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +ActionMappings=(ActionName="FireEvent",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="ReloadEvent",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="SwitchNextWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
++ActionMappings=(ActionName="SwitchPreviosWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
