Temp MaxHealth boost Temp invinsibility Temp stun tested

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -140,6 +140,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SwitchNextWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
 +ActionMappings=(ActionName="SwitchPreviosWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="OpenInventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="AblityAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
