Grenade Launcher bug fix

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,6 +62,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="CustomCameraTrace")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +EditProfiles=(Name="BlockAll",CustomResponses=((Channel="LandscapeCursor"),(Channel="CustomCameraTrace",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWall",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
++EditProfiles=(Name="InvisibleWallDynamic",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
